<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="start"
            android:layout_marginTop="120sp"/>
        <TextView
            android:id="@+id/tv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Please_fill_in_a_few_details_below" android:textColor="@color/black" android:textSize="20sp" android:layout_marginHorizontal="30dp" android:layout_gravity="start" android:layout_marginTop="13sp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_custom_bg"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_custom_bg"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPassword"
            android:hint="@string/Password"/>

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forgot_Password"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="13sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:background="@drawable/home_background"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            android:textColor="@color/white"
            android:text="@string/Register_"/>
        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Or"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="13sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20sp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/search"/>
            <TextView
                android:id="@+id/tv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_with_google"
                android:textColor="@color/blue"
                android:textSize="20sp"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Accounts"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>
        <TextView
            android:id="@+id/tv_already_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Already_Accounts"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:layout_marginTop="40dp"/>
    </LinearLayout>

</ScrollView>